--- a/adventure/index.html
+++ b/adventure/index.html
@@ -4,9 +4,9 @@
 	<!-- Base of the path -->
 	<base href="../" target="_blank">
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.7.3">
-	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2.7.3">
-	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css?v=2.7.3">
+	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.7.4">
+	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2.7.4">
+	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css?v=2.7.4">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -19,7 +19,7 @@
 			<div class="menuItem menuItemRight">
 				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
 				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleDropdownNav()"></i>
-				<div id="dropdownNav"></div>
+				<div id="dropdownNav" class="dtk-theme-cauldron-inverse dtk-theme-cauldron-text1"></div>
 			</div>
 		</div>
 	</div>
@@ -77,11 +77,11 @@
 <!-- Stream Embed API -->
 <script src="https://embed.videodelivery.net/embed/sdk.latest.js"></script>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.7.3"></script>
-<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.7.3"></script>
-<script src="https://dejai.github.io/scripts/js/v3/cloudflarewrapper.js?v=2.7.3"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.7.4"></script>
+<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.7.4"></script>
+<script src="https://dejai.github.io/scripts/js/v3/cloudflarewrapper.js?v=2.7.4"></script>
 <!-- My Adventure code -->
-<script type="text/javascript" src="src/js/models.js?v=2.7.3"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.7.3"></script>
-<script type="text/javascript" src="src/js/adventure.js?v=2.7.3"></script>
+<script type="text/javascript" src="src/js/models.js?v=2.7.4"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.7.4"></script>
+<script type="text/javascript" src="src/js/adventure.js?v=2.7.4"></script>
 </html>
