--- a/adventure/index.html
+++ b/adventure/index.html
@@ -34,8 +34,8 @@
 		<span id="overviewVideoCount"></span>
 		<span id="overviewPhotoCount"></span>
 		<span id="shareAdventureLinkSection" data-short-link="" class="shareLinkSection pointer hidden">
-			<span class="shareLink showAfterLinkCopied hideOnLinkCopied">
-				<i class="fa-regular fa-share-from-square shortLink " onclick="onCopyShortLink(this)"></i>&nbsp;<span onclick="onCopyShortLink(this)">share</span>
+			<span class="shareLink showAfterLinkCopied hideOnLinkCopied" onclick="onCopyShortLink(this)">
+				<i class="fa-regular fa-share-from-square shortLink"></i><span style="padding-left:0.2%;">share</span>
 			</span>
 			<span class="hidden showOnLinkCopied hideAfterLinkCopied">Link copied</span>
 		</span>
@@ -46,8 +46,8 @@
 		<span class="subMenuItem subMenuItemLeft fa fa-chevron-circle-left pointer iconSize hidden showOnContentView showOnDescriptionView hideOnListView hideIfOneContent" onclick="onPreviousView()"></span>
 		<span id="contentTitle" class="subMenuItem subMenuItemMiddle hidden centered showOnContentView hideOnDescriptionView"></span>
 		<span id="shareContentShortLinkSection" data-short-link="" class="shareLinkSection pointer subMenuItem subMenuItemRight hidden hideOnDescriptionView">
-			<span class="shareLink showAfterLinkCopied hideOnLinkCopied">
-				<i class="fa-regular fa-share-from-square shortLink " onclick="onCopyShortLink(this)"></i>&nbsp;<span onclick="onCopyShortLink(this)">share</span>
+			<span class="shareLink showAfterLinkCopied hideOnLinkCopied" onclick="onCopyShortLink(this)">
+				<i class="fa-regular fa-share-from-square shortLink "></i><span style="padding-left:0.2%;">share</span>
 			</span>
 			<span class="hidden showOnLinkCopied hideAfterLinkCopied">Link copied</span>
 		</span>
